# sketch_backend_python

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: db.py  main.py
src/config/: сonfig.py
src/core/: settings.py
src/database/: db.py  models.py
src/users/: models.py  users.py  users_routers.py
src/utils/: utils.py
tests/: conftest.py  test_db.py
